--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,12 @@
     <string name="successful">Account Created Successfully </string>
     <string name="auth_failed">Data Invalid...Try Again</string>
     <string name="auth_success">Login Successful...Redirecting</string>
+    <string name="title_activity_home">Welcome</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="signout">Sign Out</string>
 
 </resources>
