--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="action_settings">Settings</string>
     <string name="signout">Sign Out</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_contact">Name or Phone</string>
+    <string name="profile_fragment_title">Profile- Edit</string>
+
 </resources>
