--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_contact">Name or Phone</string>
     <string name="profile_fragment_title">Profile- Edit</string>
+    <string name="events_fragment_title">Events</string>
+    <string name="events_hint">Enter Message</string>
 
 </resources>
